# video-sampler

./: Cargo.toml  README.md  build.rs
res/: main.glade  queue_row.glade  spec.gresource.xml
src/: config.rs  main.rs  res.rs  sampler.rs
src/ui/: file_row.rs  main.glade  mod.rs  queue_row.rs
