[package]
name = "video-sampler"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Xidorn Quan <me@upsuper.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
crossbeam-channel = "0.4.2"
gdk = "0.12.1"
gdk-pixbuf = "0.8.0"
gio = "0.8.1"
glib = "0.9.3"
gst = { version = "0.15.4", package = "gstreamer" }
gst-app = { version = "0.15.4", package = "gstreamer-app" }
gtk = { version = "0.8.1", features = ["v3_16"] }
num_cpus = "1.13.0"
pango = "0.8.0"
png = "0.16.2"
rand = "0.7.3"
url = "2.1.1"

[build-dependencies]
anyhow = "1.0.28"
