[package]
name = "video-sampler"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Xidorn Quan <me@upsuper.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
crossbeam-channel = "0.5.5"
directories = "3.0.1"
gdk = "0.13.0"
gdk-pixbuf = "0.9.0"
gio = "0.9.0"
glib = "0.10.0"
gst = { version = "0.16.0", package = "gstreamer" }
gst-app = { version = "0.16.0", package = "gstreamer-app" }
gtk = { version = "0.9.0", features = ["v3_16"] }
num_cpus = "1.13.0"
pango = "0.9.0"
png = "0.16.2"
rand = "0.7.3"
serde = { version = "1.0.106", features = ["derive"] }
toml = "0.5.6"
url = "2.1.1"

[build-dependencies]
anyhow = "1.0.28"
